--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
 
             /* make it behave like bootstrap container */
-            max-width: 600px;
+            max-width: 800px;
             margin-left: auto;
             margin-right: auto;
             padding: 20px;
@@ -27,6 +27,7 @@
             flex-direction: column;
             flex-wrap: wrap;
             max-height: 400px;
+            gap: 5px;
         }
     </style>
 </head>
