--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             flex-wrap: wrap;
             max-height: 400px;
             gap: 5px;
+            font-family: monospace;
         }
     </style>
 </head>
